# league-sort

./: .gitignore  CMakeLists.txt  README.md  championship_simulator.cpp  championship_simulator.h  file_utils.cpp  file_utils.h  main.cpp  match.cpp  match.h  point_scheme.cpp  point_scheme.h  result_sheet.cpp  result_sheet.h  team.cpp  team.h  utils.cpp  utils.h
test/: CMakeLists.txt  championship_simulator_tests.cpp  championship_simulator_tests.h  match_test.cpp  match_test.h  random_number_generator.cpp  random_number_generator.h  result_sheet_test.cpp  result_sheet_test.h  team_test.cpp  team_test.h  test_utils.cpp  test_utils.h
